gradle files for chaquopy

--- a/ConversationAnalysis/app/build.gradle
+++ b/ConversationAnalysis/app/build.gradle
@@ -1,15 +1,24 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.chaquo.python'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "edu.uvm.cs275.conversationanalysis"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
+        python {
+            pip {
+                install "git+https://github.com/detly/gammatone.git"
+            }
+        }
     }
     buildTypes {
         release {
