set lang level to 8

--- a/ConversationAnalysis/app/build.gradle
+++ b/ConversationAnalysis/app/build.gradle
@@ -35,6 +35,11 @@ def getAPIURL() {
 }
 
 android {
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
     defaultConfig {
         buildConfigField "String", "APIURL", "\""+getAPIURL()+"\""
     }
