--- a/ConversationAnalysis/app/build.gradle
+++ b/ConversationAnalysis/app/build.gradle
@@ -54,4 +54,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+}
+
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
 }
