--- a/ConversationAnalysis/app/src/main/AndroidManifest.xml
+++ b/ConversationAnalysis/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProcessingActivity"></activity>
+        <activity android:name=".DetailView" />
     </application>
 
 </manifest>
