--- a/ConversationAnalysis/app/src/main/AndroidManifest.xml
+++ b/ConversationAnalysis/app/src/main/AndroidManifest.xml
@@ -18,14 +18,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProcessingActivity"></activity>
+        <activity
+            android:name=".ProcessingActivity"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".DetailView" />
         <activity android:name=".ConversationList"></activity>
     </application>
