--- a/ConversationAnalysis/app/src/main/AndroidManifest.xml
+++ b/ConversationAnalysis/app/src/main/AndroidManifest.xml
@@ -28,9 +28,12 @@
         </activity>
         <activity
             android:name=".ProcessingActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailView" />
-        <activity android:name=".ConversationListActivity"></activity>
+        <activity android:name=".DetailView"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ConversationListActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <service
             android:name=".service.BackgroundUploadService"
